--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
                 <img src="andhra.png" alt="Himalayas">
                 <img src="goa.png" alt="Goa Beaches">
                 <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
+                <img src="kerela1.png" alt="Kerala Backwaters">
+                <img src="andhra.png" alt="Himalayas">
+                <img src="goa.png" alt="Goa Beaches">
+                <img src="rajasthan.png" alt="Rajasthan Landscape">
             </div>
         </div>
         <div class="overlay">
