--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
             <div class="login-links">
                 <a href="#">Forgot Password?</a>
                 <span> | </span>
-                <a href="#">Create a New Account</a>
+                <a href="createnew.html">Create a New Account</a>
             </div>
         </div>
     </div>
