--- a/destination.html
+++ b/destination.html
@@ -322,8 +322,8 @@
             </div>
 
             <div class="destination-card" data-state="chattisgarh" data-season="any">
-                <a href="chhattisgarh.html">
-                    <img src="chhattisgarh.png" alt="Chhattisgarh">
+                <a href="chattisgarh.html">
+                    <img src="chattisgarh.png" alt="Chhattisgarh">
                     <h3>Chhattisgarh</h3>
                     <p>Explore the lush forests and diverse wildlife of Chhattisgarh.</p>
                 </a>
