--- a/rajasthan.html
+++ b/rajasthan.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Places to Visit in Rajasthan - VacaNation</title>
-    <link rel="stylesheet" href="styles1.css">
     <style>
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -15,26 +14,32 @@
             font-family: Arial, sans-serif;
             animation: fadeIn 1.5s ease-in-out;
             margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
         }
 
         /* Header */
         header {
             background-color: #222;
             color: white;
-            padding: 20px 0;
-            text-align: center;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo h1 {
+            font-size: 24px;
+            color: #54c571;
+            margin: 0;
         }
 
         nav ul {
             list-style: none;
             padding: 0;
             margin: 0;
-            display: inline-block;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
+            display: flex;
+            gap: 20px;
         }
 
         nav ul li a {
@@ -42,33 +47,48 @@
             text-decoration: none;
             font-weight: bold;
             font-size: 17px;
+            padding: 10px 15px;
+            transition: background 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: #333;
+            border-radius: 5px;
         }
 
         /* Content */
         .container {
-            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+            padding: 30px;
             text-align: center;
         }
 
         .container h1 {
-            font-size: 36px;
+            font-size: 2.5em;
             color: #333;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
         .places-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            justify-items: center;
+            align-items: start;
+            margin-bottom: 40px;
         }
 
         .place-card {
-            width: 300px;
-            margin: 15px;
+            width: 250px;
             border: 1px solid #ddd;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            background-color: #fff;
+            text-align: center;
         }
 
         .place-card:hover {
@@ -77,33 +97,40 @@
 
         .place-card img {
             width: 100%;
-            height: 200px;
+            height: 180px;
             object-fit: cover;
         }
 
         .place-card h3 {
-            padding: 15px;
+            padding: 10px;
             background-color: #54c571;
             color: white;
             margin: 0;
+            font-size: 1.2em;
         }
 
         .place-card p {
-            padding: 10px;
-            color: #333;
+            padding: 15px;
+            color: #555;
+            font-size: 0.95em;
         }
 
         .details {
             padding: 20px;
-            text-align: left;
             color: #333;
+            font-size: 1.1em;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 20px auto 0 auto;
+            text-align: left;
         }
 
         footer {
             background-color: #222;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
+            font-size: 0.9em;
         }
     </style>
 </head>
@@ -131,64 +158,26 @@
         <!-- Places List -->
         <div class="places-list">
             <div class="place-card">
-                <img src="jaipur.png" alt="Jaipur">
+                <img src="https://via.placeholder.com/300x180" alt="Jaipur">
                 <h3>Jaipur</h3>
                 <p>Known as the Pink City, Jaipur is famous for its royal palaces and vibrant markets.</p>
             </div>
-
             <div class="place-card">
-                <img src="udaipur.png" alt="Udaipur">
+                <img src="https://via.placeholder.com/300x180" alt="Udaipur">
                 <h3>Udaipur</h3>
                 <p>Famed for its beautiful lakes and palaces, Udaipur offers stunning views and rich history.</p>
             </div>
-
             <div class="place-card">
-                <img src="jaisalmer.png" alt="Jaisalmer">
+                <img src="https://via.placeholder.com/300x180" alt="Jaisalmer">
                 <h3>Jaisalmer</h3>
                 <p>Known as the Golden City, Jaisalmer is famous for its desert forts and stunning sand dunes.</p>
             </div>
-
             <div class="place-card">
-                <img src="jodhpur.png" alt="Jodhpur">
+                <img src="https://via.placeholder.com/300x180" alt="Jodhpur">
                 <h3>Jodhpur</h3>
                 <p>Known as the Blue City, Jodhpur is famous for its historic forts and vibrant blue houses.</p>
             </div>
-
-            <div class="place-card">
-                <img src="pushkar.png" alt="Pushkar">
-                <h3>Pushkar</h3>
-                <p>A sacred city famous for its annual camel fair and the Pushkar Lake.</p>
-            </div>
-
-            <div class="place-card">
-                <img src="ranthambore.png" alt="Ranthambore National Park">
-                <h3>Ranthambore National Park</h3>
-                <p>One of the largest national parks in India, known for its tiger reserve.</p>
-            </div>
-
-            <div class="place-card">
-                <img src="chittorgarh.png" alt="Chittorgarh">
-                <h3>Chittorgarh</h3>
-                <p>Famous for its massive fort, a UNESCO World Heritage Site, with a rich history.</p>
-            </div>
-
-            <div class="place-card">
-                <img src="bikaner.png" alt="Bikaner">
-                <h3>Bikaner</h3>
-                <p>Known for its rich heritage, delicious snacks, and the Junagarh Fort.</p>
-            </div>
-
-            <div class="place-card">
-                <img src="alwar.png" alt="Alwar">
-                <h3>Alwar</h3>
-                <p>Known for its scenic beauty and the famous Bala Quila Fort.</p>
-            </div>
-
-            <div class="place-card">
-                <img src="sawai_madhopur.png" alt="Sawai Madhopur">
-                <h3>Sawai Madhopur</h3>
-                <p>Gateway to the Ranthambore National Park, perfect for wildlife enthusiasts.</p>
-            </div>
+            <!-- Add more place-cards as needed -->
         </div>
 
         <!-- Travel and Stay Details -->
@@ -201,7 +190,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 VacaNation | All Rights Reserved | NishikaShah , MridulikaMukerji , AtharvaNaik</p>
+        <p>&copy; 2024 VacaNation | All Rights Reserved | Nishika Shah, Mridulika Mukerji, Atharva Naik</p>
     </footer>
 </body>
 </html>
